@@ -4,9 +4,7 @@ package world.bentobox.challenges.commands;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import world.bentobox.bentobox.api.addons.Addon;
 import world.bentobox.bentobox.api.commands.CompositeCommand;
 import world.bentobox.bentobox.api.user.User;
 import world.bentobox.bentobox.util.Util;
@@ -17,7 +15,7 @@ import world.bentobox.challenges.utils.Utils;
 
 
 /**
- * This command allows to complete challenges without a gui.
+ * This command allows completing challenges without a gui.
  */
 public class CompleteChallengeCommand extends CompositeCommand
 {
@@ -26,10 +24,12 @@ public class CompleteChallengeCommand extends CompositeCommand
      * @param addon Challenges addon.
      * @param cmd Parent Command.
      */
-    public CompleteChallengeCommand(Addon addon, CompositeCommand cmd)
+    public CompleteChallengeCommand(ChallengesAddon addon, CompositeCommand cmd)
     {
-        super(addon, cmd, "complete");
-        this.addon = (ChallengesAddon) addon;
+        super(addon,
+            cmd,
+            addon.getChallengesSettings().getPlayerCompleteCommand().split(" ")[0],
+            addon.getChallengesSettings().getPlayerCompleteCommand().split(" "));
     }
 
 
@@ -40,7 +40,7 @@ public class CompleteChallengeCommand extends CompositeCommand
     public void setup()
     {
         this.setOnlyPlayer(true);
-        this.setPermission("complete");
+        this.setPermission("challenges");
         this.setParametersHelp("challenges.commands.user.complete.parameters");
         this.setDescription("challenges.commands.user.complete.description");
     }
@@ -54,7 +54,7 @@ public class CompleteChallengeCommand extends CompositeCommand
     {
         if (args.isEmpty())
         {
-            user.sendMessage("challenges.errors.no-name");
+            Utils.sendMessage(user, user.getTranslation("challenges.errors.no-name"));
             this.showHelp(this, user);
             return false;
         }
@@ -62,22 +62,22 @@ public class CompleteChallengeCommand extends CompositeCommand
         {
             // Add world name back at the start
             String challengeName = Utils.getGameMode(this.getWorld()) + "_" + args.get(0);
-            Challenge challenge = this.addon.getChallengesManager().getChallenge(challengeName);
+            Challenge challenge = this.<ChallengesAddon>getAddon().getChallengesManager().getChallenge(challengeName);
 
             if (challenge != null)
             {
-                int count = args.size() == 2 ? Integer.valueOf(args.get(1)) : 1;
+                int count = args.size() == 2 ? Integer.parseInt(args.get(1)) : 1;
 
                 boolean canMultipleTimes =
                         user.hasPermission(this.getPermission() + ".multiple");
 
                 if (!canMultipleTimes && count > 1)
                 {
-                    user.sendMessage("challenges.error.no-multiple-permission");
+                    Utils.sendMessage(user, user.getTranslation("challenges.error.no-multiple-permission"));
                     count = 1;
                 }
 
-                return TryToComplete.complete(this.addon,
+                return TryToComplete.complete(this.getAddon(),
                         user,
                         challenge,
                         this.getWorld(),
@@ -87,7 +87,7 @@ public class CompleteChallengeCommand extends CompositeCommand
             }
             else
             {
-                user.sendMessage("challenges.errors.unknown-challenge");
+                Utils.sendMessage(user, user.getTranslation("challenges.errors.unknown-challenge"));
                 this.showHelp(this, user);
                 return false;
             }
@@ -113,10 +113,11 @@ public class CompleteChallengeCommand extends CompositeCommand
         case 3:
             
             // Create suggestions with all challenges that is available for users.
-            returnList.addAll(this.addon.getChallengesManager().getAllChallengesNames(this.getWorld()).stream().
-                    filter(challenge -> challenge.startsWith(Utils.getGameMode(this.getWorld()) + "_")).
-                    map(challenge -> challenge.substring(Utils.getGameMode(this.getWorld()).length() + 1)).
-                    collect(Collectors.toList()));
+            returnList.addAll(this.<ChallengesAddon>getAddon().getChallengesManager().getAllChallengesNames(this.getWorld()).
+                    stream().
+                    filter(challenge -> challenge.startsWith(Utils.getGameMode(this.getWorld()) + "_") ||
+                            challenge.startsWith(Utils.getGameMode(this.getWorld()).toLowerCase() + "_")).
+                    map(challenge -> challenge.substring(Utils.getGameMode(this.getWorld()).length() + 1)).toList());
             break;
         case 4:
             // Suggest a number of completions.
@@ -135,14 +136,4 @@ public class CompleteChallengeCommand extends CompositeCommand
 
         return Optional.of(Util.tabLimit(returnList, lastString));
     }
-
-
-    // ---------------------------------------------------------------------
-    // Section: Variables
-    // ---------------------------------------------------------------------
-
-    /**
-     * Variable that holds challenge addon. Single casting.
-     */
-    private ChallengesAddon addon;
 }
