@@ -2,11 +2,9 @@ package world.bentobox.challenges.commands.admin;
 
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import world.bentobox.bentobox.api.addons.Addon;
 import world.bentobox.bentobox.api.commands.CompositeCommand;
@@ -15,11 +13,12 @@ import world.bentobox.bentobox.api.user.User;
 import world.bentobox.bentobox.util.Util;
 import world.bentobox.challenges.ChallengesAddon;
 import world.bentobox.challenges.database.object.Challenge;
+import world.bentobox.challenges.utils.Constants;
 import world.bentobox.challenges.utils.Utils;
 
 
 /**
- * This command allows to reset challenges without a gui.
+ * This command allows resetting challenges without a gui.
  */
 public class ResetCommand extends CompositeCommand
 {
@@ -57,7 +56,7 @@ public class ResetCommand extends CompositeCommand
         {
             if (user.isPlayer())
             {
-                user.sendMessage("challenges.errors.no-name");
+                Utils.sendMessage(user, user.getTranslation("challenges.errors.no-name"));
             }
             else
             {
@@ -68,7 +67,7 @@ public class ResetCommand extends CompositeCommand
         {
             if (user.isPlayer())
             {
-                user.sendMessage("challenges.errors.missing-arguments");
+                Utils.sendMessage(user, user.getTranslation("challenges.errors.missing-arguments"));
             }
             else
             {
@@ -83,7 +82,8 @@ public class ResetCommand extends CompositeCommand
             {
                 if (user.isPlayer())
                 {
-                    user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+                    Utils.sendMessage(user, user.getTranslation("general.errors.unknown-player",
+                        TextVariables.NAME, args.get(0)));
                 }
                 else
                 {
@@ -92,7 +92,8 @@ public class ResetCommand extends CompositeCommand
 
                 return false;
             }
-
+            
+            User target = User.getInstance(targetUUID);
             // Add world name back at the start
 
             if (args.get(1).equals("all"))
@@ -101,13 +102,12 @@ public class ResetCommand extends CompositeCommand
 
                 if (user.isPlayer())
                 {
-                    user.sendMessage("challenges.messages.admin.reset-all",
-                        "[player]", User.getInstance(targetUUID).getName());
+                    Utils.sendMessage(user, user.getTranslation("challenges.messages.reset-all",
+                        Constants.PARAMETER_PLAYER, target.getName()));
                 }
                 else
                 {
-                    this.addon.log("All challenges for user " +
-                        User.getInstance(targetUUID).getName() + " was reset!");
+                    this.addon.log("All challenges for user " + target.getName() + " was reset!");
                 }
 
                 return true;
@@ -125,21 +125,21 @@ public class ResetCommand extends CompositeCommand
 
                         if (user.isPlayer())
                         {
-                            user.sendMessage("challenges.messages.admin.reset",
-                                    "[name]", challenge.getFriendlyName(),
-                                    "[player]", User.getInstance(targetUUID).getName());
+                            Utils.sendMessage(user, user.getTranslation("challenges.messages.reset",
+                                Constants.PARAMETER_NAME, challenge.getFriendlyName(),
+                                Constants.PARAMETER_PLAYER, target.getName()));
                         }
                         else
                         {
                             this.addon.log("Challenge " + challenge.getFriendlyName() + " was reset for player " +
-                                    User.getInstance(targetUUID).getName());
+                                target.getName());
                         }
                     }
                     else
                     {
                         if (user.isPlayer())
                         {
-                            user.sendMessage("challenges.messages.admin.not-completed");
+                            Utils.sendMessage(user, user.getTranslation("challenges.messages.not-completed"));
                         }
                         else
                         {
@@ -153,7 +153,7 @@ public class ResetCommand extends CompositeCommand
                 {
                     if (user.isPlayer())
                     {
-                        user.sendMessage("challenges.errors.unknown-challenge");
+                        Utils.sendMessage(user, user.getTranslation("challenges.errors.unknown-challenge"));
                     }
                     else
                     {
@@ -183,25 +183,17 @@ public class ResetCommand extends CompositeCommand
 
         switch (size)
         {
-            case 3:
+            case 3 ->
                 // Create suggestions with all challenges that is available for users.
-
                 returnList.addAll(Util.getOnlinePlayerList(user));
-                break;
-            case 4:
+            case 4 -> {
                 // Create suggestions with all challenges that is available for users.
                 returnList.addAll(this.addon.getChallengesManager().getAllChallengesNames(this.getWorld()).stream().
-                    map(challenge -> challenge.substring(Utils.getGameMode(this.getWorld()).length() + 1)).
-                    collect(Collectors.toList()));
-
+                        map(challenge -> challenge.substring(Utils.getGameMode(this.getWorld()).length() + 1)).toList());
                 returnList.add("all");
-
-                break;
-            default:
-            {
-                returnList.addAll(Collections.singletonList("help"));
-                break;
             }
+            default ->
+                returnList.add("help");
         }
 
         return Optional.of(Util.tabLimit(returnList, lastString));
@@ -215,5 +207,5 @@ public class ResetCommand extends CompositeCommand
     /**
      * Variable that holds challenge addon. Single casting.
      */
-    private ChallengesAddon addon;
+    private final ChallengesAddon addon;
 }
